# flow

./: .env.example  .flox.disabled  .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  agents.md  build.rs  flow.py  flow.toml  install.sh  pyproject.toml  readme.md  test-extension.md  vendor.lock.toml
.ai/: commit-checkpoints.json  consumed-checkpoints.json  health-checks.json  repos.toml  review-log.jsonl
.ai/db/: index.ts  package.json  schema.ts
.ai/docs/: .last_sync  architecture.md  changelog.md  commands.md
.ai/recipes/project/: bootstrap-core-tools.md  install-rise-auto.md  installer-smoke-sh.md  release-core-toolchain.md  release-flow-registry.md  release-rise-registry.md  release-seq-registry.md
.ai/repos/dtolnay/: anyhow
.ai/repos/rust-lang/: crates.io-index
.ai/repos/tokio-rs/: tokio
.ai/sessions/claude/: index.json
.ai/skills/pr-markdown-body-file/: skill.md
.ai/skills/quality-bun-feature-delivery/: skill.md
.ai/tasks/flow/bench-cli/: main.mbt
.ai/tasks/flow/dev-check/: main.mbt
.ai/tasks/flow/noop/: main.mbt  moon.pkg.json
.ai/tasks/flow/pr-ready/: main.mbt  moon.pkg.json
.ai/tasks/flow/regression-smoke/: main.mbt  moon.mod.json
.ai/tasks/flow/release-preflight/: main.mbt
.ai/todos/: todos.json
.claude/: agents.md
.codex/: agents.md
.flox/: env.json
.flox/env/: env.json  manifest.toml
.github/workflows/: canary.yml  nightly-validation.yml  pr-fast.yml  release.yml
.pi/extensions/: test-extensibility.ts
.wtf/: .gitignore  commit-checkpoints.json
bench/ffi_host_boundary/: Cargo.toml
bench/ffi_host_boundary/src/: lib.rs
bench/moon_ffi_boundary/: main.mbt  moon.mod.json  moon.pkg.template.json
crates/ai_taskd_client/: Cargo.toml
crates/ai_taskd_client/src/: main.rs
crates/flow_commit_scan/: Cargo.toml
crates/flow_commit_scan/src/: lib.rs
crates/opentui-lite/: Cargo.toml
crates/opentui-lite/src/: lib.rs
crates/seq_client/src/: lib.rs
crates/seq_everruns_bridge/: Cargo.toml
crates/seq_everruns_bridge/src/: maple.rs
desktop/: index.html  package.json  vite.config.ts
desktop/scripts/: tauri-dev.sh
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: FlowLogsView.tsx
desktop/src/hooks/: use-tty-streams.ts
docs/: ai-dev-layout.md  ai-run-task-fast-path.md  ai-task-fast-path-guide.md  ai-traces.md  anonymous-telemetry-contract.md  ascii-commit-visualization-pipeline.md  ci-cd-runbook.md  codex-first-control-plane-roadmap.md  codex-fork-tasks.md  codex-interface.md  codex-maple-telemetry-runbook.md  codex-openai-session-resolver.md  dependency-vendoring.md  dev-server-management.md  env-security-roadmap.md  everruns-maple-runbook.md  everruns-seq-bridge-integration.md  external-cli-install-run-v1.md  external-cli-manifest-v1.md  fast-commit-deep-review-loop.md  features.md  flow-toml-spec.md  how-api-expects-logs-errors-for-automatic-fixes.md  how-flow-daemon-manages-macos-services.md  how-to-make-a-project-flow-project.md  how-to-use-flow-ai-to-manage-claude-code-sessions.md  how-to-use-flow-to-deploy.md  how-to-use-flow-to-store-and-work-with-env.md  ideas.toml  index.mdx  install-script-latest-release-verification.md  jj-home-branch-workflow.md  jj-review-workspaces.md  jj-workspaces-for-parallel-work.md  local-domains-domainsd-cpp-spec.md  local-domains-no-random-ports.md  log-ingesting.md  macos-codesigning.md  moonbit-ai-tasks-implementation.md  moonbit-rust-boundary-refactor-plan.md  (+27 more)
docs/bench/: cli-startup.md  moonbit-rust-ffi-boundary.md  readme.md
docs/commands/: ai.md  clone.md  commit.md  commits.md  config.md  db.md  deploy.md  docs.md  domains.md  down.md  env.md  ext.md  failure.md  fast.md  global.md  install.md  invariants.md  jj.md  migrate.md  new.md  pr.md  publish.md  readme.md  recipe.md  release.md  repos.md  reviews-todo.md  seq-rpc.md  services.md  setup.md  skills.md  sync.md  tasks.md  up.md  upstream.md  url.md  web.md
docs/commits/: readme.md
lib/vendor-manifest/: clap.toml  rusqlite.toml  toml.toml  tracing-subscriber.toml
npm/flow/: package.json  readme.md
scripts/: agents-switch.sh  ai-taskd-launchd.py  bench-ai-runtime.py  bench-cli-startup.py  bench-moonbit-rust-ffi.py  bootstrap-linsa-contributor.sh  build-zed-app.sh  build_rl_runtime_dataset.py  cdn-nginx.conf  check_cli_startup_thresholds.py  check_release_tag_version.py  ci_blacksmith.py  ci_host_runner.py  ci_host_setup.sh  cli_startup_thresholds.json  codex-flow-wrapper  codex-jazz-wrapper  codex-skill-eval-launchd.py  codex_fork.py  codex_j.py  deploy.sh  deps_check.py  designer_memwatch.py  free_space.sh  generate_help_full_json.py  install-codedb-w.sh  install-linux-hub.sh  install-macos-dev.sh  install-staged-zed-app.sh  install.sh  myflow-commit-session-smoke.sh  npm-publish.sh  package-release.sh  pre-push-guard.sh  private_mirror.py  publish-release.sh  release.sh  remote-hub-setup.sh  rl_signal_summary.py  run-health-checks.mjs  (+5 more)
scripts/ci/: check-readme-case.sh
spec/: tracing-flow.md
src/: activity_log.rs  agent.rs  agent_setup.rs  agents.rs  ai.rs  ai_context.rs  ai_everruns.rs  ai_project_manifest.rs  ai_server.rs  ai_taskd.rs  ai_tasks.rs  ai_test.rs  analytics.rs  archive.rs  ask.rs  auth.rs  auto_setup.rs  base_tool.rs  branches.rs  changes.rs  cli.rs  code.rs  codex_memory.rs  codex_runtime.rs  codex_session_docs.rs  codex_session_index.rs  codex_skill_eval.rs  codex_telemetry.rs  codex_text.rs  codexd.rs  commit.rs  commits.rs  config.rs  daemon.rs  daemon_snapshot.rs  db.rs  deploy.rs  deploy_setup.rs  deps.rs  discover.rs  (+116 more)
src/proxy/: mod.rs  server.rs  summary.rs  trace.rs
test-data/simple-project/: flow.toml
tests/: deps.ts  test_log_server.ts
tools/domainsd-cpp/: README.md  domainsd.cpp  install-macos-launchd.sh  readme.md  uninstall-macos-launchd.sh
