[package]
name = "flowd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "f"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json", "blocking"] }
which = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
notify-debouncer-mini = "0.4"
shellexpand = "3"
shell-words = "1.1"
base64 = "0.22"
strip-ansi-escapes = "0.1"
portable-pty = "0.8"

[dev-dependencies]
mockito = "1.7"
tempfile = "3"
