[package]
name = "flowd"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/nikivdev/flow"
autobins = false

[workspace]
members = [
  ".",
  "crates/ai_taskd_client",
  "crates/flow_commit_scan",
  "crates/opentui-lite",
  "crates/seq_client",
  "crates/seq_everruns_bridge",
]
default-members = ["."]
resolver = "2"

[[bin]]
name = "f"
path = "src/main.rs"

[[bin]]
name = "flow"
path = "src/main.rs"

[[bin]]
name = "lin"
path = "src/bin/lin.rs"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
which = "7"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "8"
notify-debouncer-mini = "0.7"
shellexpand = "3"
shell-words = "1"
base64 = "0.22"
bs58 = "0.5.1"
sha2 = "0.10"
hex = "0.4"
url = "2"
strip-ansi-escapes = "0.2"
portable-pty = "0.8"
regex = "1.12.2"
chrono = "0.4.42"
dirs = "6.0.0"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
ctrlc = "3.4"
rpassword = "7"
atty = "0.2"
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2.6"
opentui-lite = { path = "crates/opentui-lite" }
blake3 = "1"
crypto_secretbox = "0.1"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
simd-json = { version = "0.14", optional = true }
seq_everruns_bridge = { path = "crates/seq_everruns_bridge" }
flow_commit_scan = { path = "crates/flow_commit_scan" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
mockito = "1.7"
tempfile = "3"

[features]
default = []
linux-host-simd-json = ["dep:simd-json"]

[patch.crates-io]
axum = { path = "lib/vendor/axum" }
reqwest = { path = "lib/vendor/reqwest" }
tower-http = { path = "lib/vendor/tower-http" }
ratatui = { path = "lib/vendor/ratatui" }
url = { path = "lib/vendor/url" }
crypto_secretbox = { path = "lib/vendor/crypto_secretbox" }
portable-pty = { path = "lib/vendor/portable-pty" }
tokio-stream = { path = "lib/vendor/tokio-stream" }
tracing-subscriber = { path = "lib/vendor/tracing-subscriber" }
futures = { path = "lib/vendor/futures" }
sha1 = { path = "lib/vendor/sha1" }
sha2 = { path = "lib/vendor/sha2" }
tokio = { path = "lib/vendor/tokio" }
crossterm = { path = "lib/vendor/crossterm" }
hmac = { path = "lib/vendor/hmac" }
toml = { path = "lib/vendor/toml" }
clap = { path = "lib/vendor/clap" }
notify-debouncer-mini = { path = "lib/vendor/notify-debouncer-mini" }
ignore = { path = "lib/vendor/ignore" }
x25519-dalek = { path = "lib/vendor/x25519-dalek" }
rusqlite = { path = "lib/vendor/rusqlite" }
rmp-serde = { path = "lib/vendor/rmp-serde" }
ctrlc = { path = "lib/vendor/ctrlc" }
